# EzEdit

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: buffer.rs  main.rs
backend/tests/: BufferBasicApiCreateInsert.txt  BufferBasicApiDeleteRowTest.txt  BufferBasicApiTest.txt
buffer/: Cargo.toml
buffer/src/: buffer.rs
buffer/tests/: BufferBasicApiDeleteInRowTest.txt  write_buffer_to_file.txt
server/: Cargo.toml  todo.md
server/src/: config.rs  lib.rs  server.rs  server.rs.orig
server/src/types/: error.rs  func_types.rs  func_types_BACKUP_208040.rs  func_types_REMOTE_208040.rs  mod.rs  params.rs  request.rs  request.rs.orig  response.rs
tests/: read_file_to_buffer.txt
