[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
serde = "1.0.191"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
typescript-type-def = { version = "0.5.8", features = ["json_value"] }
yerpc = { version = "0.5.2", features = ["support-axum"] }
